# dune-surface_int

./: CMakeLists.txt  README  README.md  config.h.cmake  dune-surface_int.pc.in  dune.module
build-cmake/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  config.h  config_collected.h.cmake  dune-surface_int-config.cmake  dune-surface_int.pc
build-cmake/cmake/modules/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-cmake/cmake/pkg/: dune-surface_int-config.cmake
build-cmake/doc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-cmake/doc/doxygen/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-cmake/dune/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-cmake/dune/surface_int/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-cmake/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake  dune-surface_int
cmake/modules/: CMakeLists.txt
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt
dune/surface_int/: CMakeLists.txt  surface_int.hh
src/: CMakeLists.txt  biconcave_disc.cc  double_torus.cc  dziku_surface.cc  ellipsoid_example.cc  genus_surface.cc  sphere_example.cc  torus_example.cc
src/grids/: SphereMesh_N=124_r=1.msh  SphereMesh_N=1652_r=1.msh  double_torus_8360.msh  dziku_surface_N=8088.msh  ellipsoid_N=6152.msh  genus_N=15632.msh  sphere.msh  torus.msh  torus_496.msh  torus_N=2512.msh  torus_N=2528.msh  vogitMesh_N=3064_d=0.5_c=0.4.msh  vogitMesh_N=3144_d=0.5_c=0.375.msh  vogitMesh_N=5980_d=0.8_c=-0.934.msh
(+3 files in other folders)
